# ORide

./: Makefile  README.md
NFLlib/include/nfl/: params.hpp  poly.hpp
NFLlib/include/nfl/prng/: FastGaussianNoise.hpp
scripts/: ntt-params.sage
src/: CMakeLists.txt  fv.hpp  serialize.hpp  stats.cpp  stats.hpp  test_honest.cpp  test_oride.cpp  test_simple.cpp  tests.hpp  util.cpp  util.hpp
